<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/buttonTakePhoto"
        android:layout_width="108dp"
        android:layout_height="62dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="8dp"
        android:text="@string/send"
        android:background="@drawable/custom_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <ImageView
        android:contentDescription="@string/gif_de_fondo"
        android:id="@+id/gifBackgroundGame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/download"
        android:textColor="@color/purple_700"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"/>

    <TextView
        android:id="@+id/textId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/score"
        android:fontFamily="@font/irishgrover"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/irishgrover"
        android:text="@string/zero"
        android:textColor="@color/red"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="304dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/irishgrover"
        android:text="@string/_00_00"
        android:textColor="@color/red"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/irishgrover"
        android:text="@string/mobil"
        android:textColor="@color/purple_500"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textId2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="316dp"
        android:layout_marginTop="32dp"
        android:text="@string/time"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="@font/irishgrover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="334dp"
        android:layout_height="499dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="120dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gifBackgroundGame">

        <androidx.camera.view.PreviewView
            android:id="@+id/previewView"
            android:layout_width="match_parent"
            android:layout_height="499dp"
            android:scaleType="fitCenter">

        </androidx.camera.view.PreviewView>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="93dp"
        android:layout_height="51dp"
        android:layout_marginStart="304dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_button"
        android:padding="0dp"
        android:text="@string/exit"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />


</androidx.constraintlayout.widget.ConstraintLayout>










