<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.joingame.JoinGameFragment">

    <TextView
        android:id="@+id/text_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:fontFamily="@font/irishgrover"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/gifBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/download"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="260dp"
        android:layout_height="286dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="68dp"
        android:src="@drawable/findit_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/game_ID"
        android:textColor="@android:color/black"
        android:fontFamily="@font/irishgrover"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/gameId"
        android:layout_width="112dp"
        android:layout_height="52dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/custom_button"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/irishgrover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textId" />

    <TextView
        android:id="@+id/textPlayerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_name"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:fontFamily="@font/irishgrover"
        app:layout_constraintTop_toBottomOf="@id/gameId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/playerName"
        android:layout_width="246dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_button"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColorHint="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/irishgrover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textPlayerName" />

    <Button
        android:id="@+id/buttonJoin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:background="@drawable/custom_button"
        android:padding="12dp"
        android:text="@string/join_game"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/irishgrover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playerName" />

    <ImageView
        android:id="@+id/backButtonJoin"
        android:layout_width="36dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/backbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>